a little comment email styling

--- a/server/libs/email/templates/comment-created.html
+++ b/server/libs/email/templates/comment-created.html
@@ -32,6 +32,7 @@
 	}
 	.comment {
 		border: 1px solid #ccc;
+		padding: 15px;
 	}
 	.FAILED {color: #d9534f;}
 	.FINISHED {color: #5cb85c;}
@@ -49,8 +50,7 @@
 		</p>
 		<div class="comment">
 			<p>By: <b>{{commentUserId}}</b> on {{dateCreated}}</p>
-
-		
+			
 			{{commentContent}}		
 		</div>
 		<p>
