fix snapshotCreated notification and  email; fix commentCreated and email;

--- a/server/libs/email/templates/comment-created.html
+++ b/server/libs/email/templates/comment-created.html
@@ -46,7 +46,7 @@
 		<h2>Hi, {{firstName}} {{lastName}}</h2>
 
 		<p>
-			A new {{commentStatus}} has been posted on a dataset you follow, <b>{{datasetName}}</b>. 
+			A new {{commentStatus}} has been posted on a dataset you follow, <b>{{datasetLabel}}</b>. 
 		</p>
 		<div class="comment">
 			<p>By: <b>{{commentUserId}}</b> on {{dateCreated}}</p>
