--- a/server/libs/email/templates/snapshot-created.html
+++ b/server/libs/email/templates/snapshot-created.html
@@ -2,9 +2,19 @@
 <head>
 <style>
 	body {
-		font-family: sans-serif;
+		font-family: 'Open Sans', sans-serif;
 		font-weight: lighter;
 		background: #F5F5F5;
+	}
+	footer {
+		border-top: 1px solid #333;
+		padding-top: 15px;
+	}
+	.link {
+		color: #00505c
+	}
+	.link:hover {
+		color: #0093a9
 	}
 	.top-bar {
 		width: 100%;
@@ -30,6 +40,10 @@
 		text-decoration: none;
 		cursor: pointer;
 	}
+	.comment {
+		border: 1px solid #ccc;
+		padding: 15px;
+	}
 	.FAILED {color: #d9534f;}
 	.FINISHED {color: #5cb85c;}
 </style>
@@ -45,9 +59,9 @@
 			A dataset you are following, <b>{{datasetLabel}}</b>,  had a new snapshot created. 
 		</p>
 
-		<p>
-			<a class='dataset-link' href="{{siteUrl}}/datasets/{{datasetId}}/versions/{{versionNumber}}">Click here to see new snapshot</a>
-		</p>
+		<div>
+			<a class='dataset-link' href="{{siteUrl}}/datasets/{{datasetId}}/versions/{{versionNumber}}">Click here to view this snapshot on OpenNeuro &raquo;</a>
+		</div>
 
 		<p>
 			Sincerely,
@@ -55,4 +69,7 @@
 		</p>
 	</div>
 </body>
+<footer>
+	If you would like to stop receiving notifications about this dataset, please <a class='link' href="{{siteUrl}}/datasets/{{datasetName}}">visit the dataset page</a> and click the 'unfollow' icon.
+</footer>
 <html>
