update email styling

--- a/server/libs/email/templates/comment-created.html
+++ b/server/libs/email/templates/comment-created.html
@@ -33,7 +33,7 @@
 	}
 	.dataset-link {
 		display: inline-block;
-		background: #5cb85c;
+		background: #008599;
 		color: #FFF;
 		font-size: 20px;
 		padding: 8px 15px;
