update email stylings and links

--- a/server/libs/email/templates/snapshot-created.html
+++ b/server/libs/email/templates/snapshot-created.html
@@ -9,6 +9,7 @@
 	footer {
 		border-top: 1px solid #333;
 		padding-top: 15px;
+		background: #F5F5F5;
 	}
 	.link {
 		color: #00505c
@@ -70,6 +71,6 @@
 	</div>
 </body>
 <footer>
-	If you would like to stop receiving notifications about this dataset, please <a class='link' href="{{siteUrl}}/datasets/{{datasetName}}">visit the dataset page</a> and click the 'unfollow' icon.
+	If you would like to stop receiving notifications about this dataset, please <a class='link' href="{{siteUrl}}/datasets/{{datasetId}}">visit the dataset page</a> and click the 'unfollow' icon.
 </footer>
 <html>
