add "Uploader is Following" flag to the dataset page

--- a/app/src/sass/crn_app/_dataset.comments.scss
+++ b/app/src/sass/crn_app/_dataset.comments.scss
@@ -28,6 +28,11 @@
           height: 25px;
         }
       }
+      .uploader-following {
+        float: left;
+        padding-top: 6px;
+        color: $ocean;
+      }
     }
   }
   pre {
