add a little padding to the top of dataset page

--- a/app/src/sass/crn_app/_dataset.sidebar.scss
+++ b/app/src/sass/crn_app/_dataset.sidebar.scss
@@ -48,8 +48,10 @@ body,
 
 .dataset-annimation {
     width: 100%;
+    padding-top: 15px;
     -webkit-transition: width .3s;
     transition: width .3s;
+    
 }
 
 .dataset-container {
