--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -276,12 +276,12 @@
                 box-sizing: border-box;
                 padding: 10px 20px;
 
-                .status-wrap {
+                .status-wrap, .metrics-wrap {
                     list-style: none;
                     padding: 0;
                     margin: 0;
 
-                    .status {
+                    .status, .metric {
                         display: inline-block;
                         float: right;
                         margin-right: 0;
@@ -294,7 +294,7 @@
                             width: 80px;
 
                             i {
-                                margin: 0;
+                                margin: 0 5px 0 0;
                             }
                         }
                     }
