--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -427,7 +427,9 @@
     float: right;
     padding: 0px 20px;
     .btn-blue {
-        padding: 10px 13px;
+        height: 45px;
         width: auto;
+        padding: 10px 13px;
+        margin-left: 5px;
     }
 }
