add .panel-body { margin-bottom = 0;} within .dataset-dataset-teasers in _dashboard.dataset.scss

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -197,6 +197,10 @@
         font-weight: 100;
     }
 
+    .panel-group {
+        margin-bottom: 0;
+    }
+
     .panel-group .panel+.panel {
         margin: 0;
     }
