adjust height and margin-bottom on search btn-blue (border on input) in _dashboard.dataset.scss

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -439,9 +439,10 @@
     float: right;
     padding: 0px 20px;
     .btn-blue {
-        height: 45px;
+        height: 44px;
         width: auto;
         padding: 10px 13px;
         margin-left: 5px;
+        margin-bottom: 1px;
     }
 }
