remove styling for result-block type and add styling for error message h6 in _dashboard.datasets.scss

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -201,8 +201,9 @@
         font-weight: 100;
     }
     
-    h6 {
-        color: $c-42;
+    h4 {
+        margin: 0 auto;
+        padding: 20px;
     }
 
     .panel-group {
