--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -111,8 +111,8 @@ h6 {
     background: $e5;
     position: fixed;
     width: 100%;
-    overflow-y: scroll;
-
+    padding-bottom: 85px;
+    
     &.snapshot,
     &.dataset {
         background: $white;
