remove redundant styling (padding) and add overflow-y: scroll  to main div

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -64,7 +64,9 @@ body {
     padding: 0;
 }
 
-.main.view.container {padding-top: 115px;}
+.main.view.container {
+    overflow-y: scroll;
+}
 
 .inner-route {
     &.light {
