add ::-webkit-scrollbar {width: 0} for invisible scrollbar on chrome

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -12,10 +12,9 @@
 
 .clearfix {@extend %clearfix;}
 
-// ::-webkit-scrollbar {
-//     width: 0;
-//     z-index: 100;
-// }
+::-webkit-scrollbar {
+    width: 0;
+}
 
 // /* Track */
 // ::-webkit-scrollbar-track {
