style the api key generator page

--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -61,6 +61,7 @@ $bootstrap-sass-asset-helper: true;
 @import './crn_app/upload.validation';
 @import './crn_app/admin.tools';
 @import './crn_app/faq';
+@import './crn_app/api';
 
 
 .logo-text{
