add btn-modal-action class for new modal confirmation button placement

--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -310,6 +310,12 @@ h6 {
     float: right !important;
 }
 
+.btn-modal-action { @extend %btn-submit-other}
+
+.btn-modal-action { 
+    margin-left: 30px;
+}
+
 .btn-modal-danger{
     border-color: $brand-danger;
     color: $brand-danger;
