--- a/packages/openneuro-app/src/sass/crn_app/_api.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_api.scss
@@ -40,6 +40,7 @@
                 text-align:center;
                 font-size: 25px;
                 padding-bottom: 10px;
+                word-wrap: break-word;
             }
             .copy-key {
                 text-align: center;
