update semantic versioning methods in snapshot creation

--- a/packages/openneuro-app/src/sass/crn_app/_common.modals.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.modals.scss
@@ -591,10 +591,20 @@ div.rt-resizable-header-content {
 }
 
 .snapshot-modal {
+    
 
     .snapshot-version {
         div {
             display: inline-block;
+
+            input {
+                margin-left: 15px;
+            }
+            label {
+                font-size: 15px;
+                font-weight: lighter;
+                color: $ocean;
+            }
         }
         span.version-point {
             padding: 0px 4px;
