fix styling for markdown faq component

--- a/packages/openneuro-app/src/sass/crn_app/_faq.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_faq.scss
@@ -25,6 +25,9 @@
                 font-size: 21px;
                 line-height: 18px;
             }
+            p {
+                display: inline-block;
+            }
         }
 
         .panel-body {
