update user references to single "name" field

--- a/packages/openneuro-server/libs/email/templates/comment-created.html
+++ b/packages/openneuro-server/libs/email/templates/comment-created.html
@@ -57,7 +57,7 @@
 		<img src="{{siteUrl}}/assets/CRN-Logo-Placeholder.png" />
 	</div>
 	<div class="content">
-		<h2>Hi, {{firstName}} {{lastName}}</h2>
+		<h2>Hi, {{name}}</h2>
 
 		<p>
 			A new {{commentStatus}} has been posted on a dataset you follow, <b>{{datasetLabel}}</b>. 
