--- a/packages/openneuro-server/libs/email/templates/job-complete.html
+++ b/packages/openneuro-server/libs/email/templates/job-complete.html
@@ -39,7 +39,7 @@
 		<img src="{{siteUrl}}/assets/CRN-Logo-Placeholder.png" />
 	</div>
 	<div class="content">
-		<h2>Hi, {{firstName}} {{lastName}}</h2>
+		<h2>Hi, {{name}}</h2>
 
 		<p>
 			Your analysis <b>{{appName}}</b> scheduled on <b>{{startDate}}</b> for dataset <b>{{datasetName}}</b> has <b class="{{status}}">{{status}}</b>. Go to your dataset snapshot to view the results.
