--- a/packages/openneuro-server/libs/email/templates/dataset-shared.html
+++ b/packages/openneuro-server/libs/email/templates/dataset-shared.html
@@ -39,7 +39,7 @@
 		<img src="{{siteUrl}}/assets/CRN-Logo-Placeholder.png" />
 	</div>
 	<div class="content">
-		<h2>Hi, {{firstName}} {{lastName}}</h2>
+		<h2>Hi, {{name}}</h2>
 
 		<p>
 			Dataset <b>{{datasetName}}</b> has been shared with you.
