--- a/packages/openneuro-server/libs/email/templates/snapshot-created.html
+++ b/packages/openneuro-server/libs/email/templates/snapshot-created.html
@@ -57,7 +57,7 @@
 		<img src="{{siteUrl}}/assets/CRN-Logo-Placeholder.png" />
 	</div>
 	<div class="content">
-		<h2>Hi, {{firstName}} {{lastName}}</h2>
+		<h2>Hi, {{name}}</h2>
 
 		<p>
 			A dataset you are following, <b>{{datasetLabel}}</b>,  had a new snapshot created. 
