--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -20,7 +20,7 @@
             text-align: center;
             width: 17px;
             height: 17px;
-            color: $ocean;
+            color: $primary;
             font-weight: 600;
         }
     }
