--- a/packages/openneuro-app/src/sass/crn_app/_dataset.comments.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.comments.scss
@@ -9,7 +9,7 @@
     outline: none;
   }
   blockquote.RichEditor-blockquote {
-    border-left: 5px solid $ocean;
+    border-left: 5px solid $primary;
   }
   .comment-header {
     label {
@@ -31,7 +31,7 @@
       .uploader-following {
         float: left;
         padding-top: 6px;
-        color: $ocean;
+        color: $primary;
       }
     }
   }
@@ -107,7 +107,7 @@
       }
 
       .copy-notification-active, .copy-notification-hidden {
-        color: $ocean;
+        color: $primary;
         cursor: default;
       }
 
@@ -132,7 +132,7 @@
       font-size: 12px;
       a {
         text-transform: uppercase;
-        color: $ocean;
+        color: $primary;
         &:hover {
           color: $sky;
         }
@@ -205,9 +205,9 @@
 
 .comment-submit {
   background: $white;
-  color: $ocean;
+  color: $primary;
   width: 90%;
-  border: 2px solid $ocean;
+  border: 2px solid $primary;
   border-radius: 0px;
   margin-left: 4%;
   &:focus {
@@ -230,7 +230,7 @@
 
 .dataset-owner-flag {
   padding: 0px 2px;
-  background-color: $ocean;
+  background-color: $primary;
   color: white;
 }
 
