--- a/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
@@ -208,7 +208,7 @@
   background: $bbb;
   transition: margin-left 0.3s ease;
   margin-top: -40px;
-  border-bottom: 5px solid $sky;
+  border-bottom: 5px solid $secondary;
 
   @media (max-width: 1428px) {
     margin-top: -60px;
