--- a/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.sidebar.scss
@@ -133,10 +133,10 @@ body,
                 &.active {
                     background-color:  $white;
                     box-shadow: inset 0 0 2px $transparent1;
-                    color: $sky;
+                    color: $secondary;
 
                     .date-modified {
-                        color: $sky;
+                        color: $secondary;
                     }
                 }
 
