--- a/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_elements-wrappers.scss
@@ -177,7 +177,7 @@ h6 {
 
 %btn-blue {
     @extend %btn-basic;
-    background-color: $sky;
+    background-color: $secondary;
     color: $white;
     margin: 0;
     border: 0;
@@ -187,7 +187,7 @@ h6 {
     &.hover,
     &.active,
     &:focus {
-        background: darken($sky, 10%);
+        background: darken($secondary, 10%);
         transition: all .3s ease-out;
         color: $white;
         outline: none;
@@ -277,7 +277,7 @@ h6 {
 
 %btn-admin-blue {
     @extend %btn-admin;
-    color: $sky;
+    color: $secondary;
     border: 0;
     text-transform: uppercase;
     transition: all .3s ease-out;
@@ -287,7 +287,7 @@ h6 {
     &.hover,
     &:focus,
     &.active {
-        color: darken($sky, 10%);
+        color: darken($secondary, 10%);
         background: $eee;
     }
 }
@@ -296,11 +296,11 @@ h6 {
 
 %btn-submit-other {
     @extend %btn-admin-blue;
-    border: 2px solid lighten($sky, 5%);
+    border: 2px solid lighten($secondary, 5%);
 
     &:active,
     &:focus {
-        border: 2px solid $sky;
+        border: 2px solid $secondary;
     }
 }
 .btn-submit-other,
@@ -400,7 +400,7 @@ h6 {
 
     &:hover {
         background: $white;
-        color: $sky;
+        color: $secondary;
     }
 
     &.active:hover {
@@ -480,7 +480,7 @@ h6 {
             margin: 0;
             background: none;
             border: 0;
-            color: $sky;
+            color: $secondary;
 
             i {
                 margin: 0 0 0 2px;
@@ -548,7 +548,7 @@ h6 {
         position: relative;
         padding: 3px 5px;
         border: 0;
-        color: $sky;
+        color: $secondary;
 
         i {
             margin-left: 0;
