--- a/packages/openneuro-app/src/sass/crn_app/_variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_variables.scss
@@ -94,6 +94,10 @@ $navbar-btn-active-text-color: $white;
 $navbar-upload-btn-background-color: $transparent3;
 $navbar-upload-btn-active-background-color: $secondary;
 
+// Footer
+$footer-background-color: $c-33;
+$footer-text-color: $white;
+
 // BS overrides
 $brand-primary:         $primary;
 $brand-success:         #24c85e !default;
