CSS: admin graph colors configurable

--- a/packages/openneuro-app/src/sass/crn_app/_admin.graphs.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_admin.graphs.scss
@@ -12,10 +12,10 @@ div.chart {
     margin-left: 20px;
     text-align: left;
     .success {
-      color: $turquoise;
+      color: $chart-success-color;
     }
     .failed {
-      color: $coral;
+      color: $chart-failed-color;
     }
   }
   .filtering {
