--- a/packages/openneuro-app/src/sass/crn_app/_variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_variables.scss
@@ -98,6 +98,12 @@ $navbar-upload-btn-active-background-color: $secondary;
 $footer-background-color: $c-33;
 $footer-text-color: $white;
 
+// Admin
+
+// Charts
+$chart-success-color: $turquoise;
+$chart-failed-color: $coral;
+
 // BS overrides
 $brand-primary:         $primary;
 $brand-success:         #24c85e !default;
