CSS: dashboard theme configurable

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -27,7 +27,7 @@
 
     &.navbar-right {
         a {
-            color: $night;
+            color: $dashboard-tab-text-color;
             padding: 5px;
             background: none;
             font-size: 12px;
