--- a/packages/openneuro-app/src/sass/crn_app/_variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_variables.scss
@@ -98,7 +98,8 @@ $navbar-upload-btn-active-background-color: $secondary;
 $footer-background-color: $c-33;
 $footer-text-color: $white;
 
-// Admin
+// Dashboard
+$dashboard-tab-text-color: $primary;
 
 // Charts
 $chart-success-color: $turquoise;
