CSS: Spinner styling configurable

--- a/packages/openneuro-app/src/sass/crn_app/_variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_variables.scss
@@ -105,6 +105,9 @@ $dashboard-tab-text-color: $primary;
 $chart-success-color: $turquoise;
 $chart-failed-color: $coral;
 
+// Misc
+$spinner-color: $turquoise; // color of the loading spinner
+
 // BS overrides
 $brand-primary:         $primary;
 $brand-success:         #24c85e !default;
