CSS: $primary-hover depends on $primary

--- a/packages/openneuro-app/src/sass/crn_app/_variables.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_variables.scss
@@ -80,7 +80,7 @@ $warning-orange: #df7600;
 
 
 $primary: $ocean;
-$primary-hover: lighten($ocean, 15%);
+$primary-hover: lighten($primary, 15%);
 $secondary: $sky;
 
 
