CSS: add $tertiary color; move file-tree classes into _dataset.file-tree.scss

--- a/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
@@ -345,7 +345,7 @@
 .uploading.right-sidebar {
   .message {
     text-align: left;
-    color: $turquoise;
+    color: $tertiary;
     text-transform: lowercase;
     font-size: 12px;
     margin: 5px 0;
