CSS: separate _variables.scss into _colors.scss, _theme.scss, and _bootstrap-overrides.scss

--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -23,8 +23,10 @@ $bootstrap-sass-asset-helper: true;
 @import 'animate/_attention-seekers/flash';
 
 
-//crn SASS ================================================================
-@import './crn_app/variables';
+//openneuro SASS ================================================================
+@import './crn_app/colors';
+@import './crn_app/theme';
+@import './crn_app/bootstrap.overrides';
 @import './crn_app/elements-wrappers';
 
 // react-select
