CSS: fonts are configurable

--- a/packages/openneuro-app/src/sass/crn_app/_common.click-to-edit.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.click-to-edit.scss
@@ -20,7 +20,7 @@
     margin: -5px 0 0 10px;
     span {
         font-size: 10px;
-        font-family: sans-serif;
+        font-family: $font-family-open;
         text-transform: uppercase;
     }
     i {
