--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -289,7 +289,7 @@
             font-weight: 200;
             .logo-text{
                  font-size: 50px;
-                font-family: 'Cabin';
+                font-family: $font-family-cabin;
             }
             .col-sm-6{
                 padding: 10px 30px 30px;
