--- a/packages/openneuro-app/src/sass/crn_app/_common.papaya.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.papaya.scss
@@ -288,7 +288,7 @@ li .papaya-menu-slider {
     position:fixed;
     top:0;
     left:0;
-    background-color:$white;
+    background-color:#fff;
     width:100%;
     height:100%;
     opacity:.5
