--- a/packages/openneuro-app/src/sass/draft/rich-editor.scss
+++ b/packages/openneuro-app/src/sass/draft/rich-editor.scss
@@ -1,5 +1,5 @@
 .RichEditor-root {
-    background: $white;
+    background: #fff;
     font-family: 'Georgia', serif;
     font-size: 14px;
     padding-bottom:10px;
