--- a/packages/openneuro-app/src/sass/react-select.scss
+++ b/packages/openneuro-app/src/sass/react-select.scss
@@ -27,7 +27,7 @@
   pointer-events: none;
 }
 .Select-control {
-  background-color: $white;
+  background-color: #fff;
   border-color: #d9d9d9 #ccc #b3b3b3;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -54,7 +54,7 @@
 .is-open > .Select-control {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  background: $white;
+  background: #fff;
   border-color: #b3b3b3 #ccc #d9d9d9;
 }
 .is-open > .Select-control > .Select-arrow {
@@ -229,7 +229,7 @@
 .Select-menu-outer {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
-  background-color: $white;
+  background-color: #fff;
   border: 1px solid #ccc;
   border-top-color: #e6e6e6;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
@@ -248,7 +248,7 @@
 }
 .Select-option {
   box-sizing: border-box;
-  background-color: $white;
+  background-color: #fff;
   color: #666666;
   cursor: pointer;
   display: block;
