--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -202,7 +202,7 @@
                     display: table-cell;
                     text-align: center;
                     vertical-align: middle;
-                    color: white;
+                    color: $white;
                 }
             }
 
@@ -431,7 +431,7 @@
     .logo-text{
         display: block;
         font-size: 38px;
-        color: #fff;
+        color: $white;
         margin: 12px 10px;
         float: left;
 
@@ -445,7 +445,7 @@
         }
         &:hover{
             .logo-end{
-                color: #fff;
+                color: $white;
             }
         }
     }
